# AutoPilotMLService

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-stable.yml
src/: Dockerfile  app.py  pyproject.toml
src/models/: scaler_x.pickle  scaler_y.pickle  speed_prediction.keras
src/test/: test_service.py
