[project]
name = "mlspeedpredictionservice"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "keras>=3.13.2",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "starlette>=1.0.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
